# machine-learning-operations-02476-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  ToDo  cloudrun-service.yaml  config.yaml  data.dvc  locustfile.py  models.dvc  prometheus.yaml  pyproject.toml  report_dynamo_export.sarif  tasks.py
.dvc/: config
.github/workflows/: data-changes.yaml  deploy-cloud-run.yaml  docker-build.yaml  linting.yaml  tests.yaml
configs/: default.yaml  subset.yaml  sweep.yaml  transformer_default_subset.yaml  transformer_default_subset_2.yaml
configs/experiment/: baseline_full.yaml  baseline_subset.yaml  transformer_full.yaml
docker/: entrypoint.sh
dockerfiles/: api.dockerfile  eval.dockerfile  test.dockerfile  train.dockerfile  train_transformer.dockerfile
docs/: deploy_gcp_cloud_run.md  mkdocs.yaml
notebooks/: compare_data.ipynb
reports/: reportchecklist.md  reports.md
src/ml_ops_project/: api.py  convert_model_to_onnx.py  data.py  data_transformer.py  model.py  model_transformer.py  onnx_fastapi.py  run_onnx_model.py  streamlit_app.py  test_onnx_api.py  train.py  train_transformer.py  view_onnx_graph.py
src/ml_ops_project/conf/: transformer_default.yaml
tests/: test_api.py  test_api_more.py  test_data_transformer_prepare_data.py  test_model.py  test_model_transformer.py  test_train_scripts.py
tests/integrationtests/: __init__.py  test_apis.py
